# PowerBlocks

./: .gitignore  Doxyfile  LICENSE  NOTICE.md  PowerBlocksConfig.cmake  PowerBlocksTargets.cmake  README.md  export.sh  export_build.sh  linker.ld  toolchain.cmake
.docker/: Dockerfile
.github/workflows/: docker-build.yml
cmake/: AddRustLibrary.cmake
docs/: BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  TODO.md  TODOS.md  debugger.md  index.md  known_issues.md
docs/contributing/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/getting_started/: building.md  docker.md  index.md  linux.md  windows.md
examples/FileSystem/: CMakeLists.txt  README.md  main.c
examples/HelloWorld/: CMakeLists.txt  README.md  main.c
examples/Rust/: CMakeLists.txt  README.md  main.c
examples/Rust/rust-lib/: Cargo.toml  lib.rs  powerpc750.json
examples/Teapot/: CMakeLists.txt  README.md  main.c  utah_teapot.c  utah_teapot.h  utah_teapot_model.c  utah_teapot_texture.c
examples/wiimote/: CMakeLists.txt  README.md  main.c
picolibc/: ppc-asm.h  setjmp.S
powerblocks/: CMakeLists.txt
powerblocks/core/: CMakeLists.txt
powerblocks/core/bluetooth/: blerror.h  bltools.c  bltootls.h  hci.c  hci.h  l2cap.c  l2cap.h
powerblocks/core/freertos_port/: FreeRTOSConfig.h  port.c  portmacro.h
powerblocks/core/graphics/: framebuffer.c  framebuffer.h  gx.c  gx.h  gx_immediate.h  gx_tev.h  gx_xf.h  video.c  video.h
powerblocks/core/ios/: ios.c  ios.h  ios_settings.c  ios_settings.h  sdio.c  sdio.h
powerblocks/core/system/: cpu.h  exceptions.c  exceptions.h  exceptions_asm.s  gpio.c  gpio.h  ios.c  ios.h  ios_settings.c  ipc.c  ipc.h  libcio.c  start.S  start.s  syscall.c  syscall.h  system.c  system.h  system_asm.s
powerblocks/core/utils/: console.c  console.h  crash_handler.c  crash_handler.h  fonts.c  fonts.h  log.c  log.h  macro.h
powerblocks/core/utils/math/: matrix3.c  matrix3.h  matrix34.c  matrix34.h  matrix4.c  matrix4.h  vec2.h  vec3.c  vec3.h
powerblocks/debugger/: CMakeLists.txt  debugger.c  debugger.h
powerblocks/filesystem/: CMakeLists.txt  fs_syscall.c  sd.c  sd.h
powerblocks/filesystem/fatfs_port/: diskio.c  ffconf.h
powerblocks/input/: CMakeLists.txt
powerblocks/input/wiimote/: wiimote.c  wiimote.h  wiimote_extension.c  wiimote_extension.h  wiimote_hid.c  wiimote_hid.h  wiimote_log.h  wiimote_sys.c  wiimote_sys.h
toolchain/: fix_symlink.py
tools/dspasm/: PowerBlocksDSPASMConfig.cmake  PowerBlocksDSPASMMacros.cmake  dspasm_cli.py
tools/dspasm/dspasm/: lexer.py  parser.py  preprocessor.py  utils.py
